--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,56 @@
   src: url('../assets/fonts/PlusJakartaSans-Italic-VariableFont_wght.ttf');
 }
 @media  screen and (max-width:320px){
+ #main{
+  display: flex;
+  flex-direction: column!important;
+  width: 100vw!important;
+  height: 100vh!important;
 
+ }
+ #result-screen{
+  background-color:  hsl(202, 55%, 16%);
+  width: 100%!important;
+  min-height: 50%!important;  
+  border-radius: 10px;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: hsl(0, 0%, 100%);
+  border-radius: 0px!important;
+}
+#calculator
+{
+  width: 100%!important;
+  height: 100%!important;
+  padding: 2%;
+  display: flex;  
+  justify-content: space-around!important;
+}
+#main > #calculator > #form > #button > button{
+  margin-bottom: 15px;
+}
+#main > #calculator > #form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+#main>#calculator>#form>#multiple-input{
+  width: 100%!important;
+  height: 40%;
+  display: flex;
+  flex-direction: column!important;
+}
+#main>#calculator>#form>#multiple-input>#year-block{
+  width: 100%!important;
+  overflow: hidden;
+}
+#main>#calculator>#form>#multiple-input>#percent-block{
+  width: 100%!important;
+  overflow: hidden;
+}
 }
 body{
   width: 100vw;
@@ -27,8 +76,11 @@ body{
   display: flex;
   flex-direction: row;
   width: 55%;
-  height: 500px;
+  min-height: 500px;
   border-radius: 10px;
+}
+#clear{
+  text-decoration: underline;
 }
 *:focus{
   outline: none;
@@ -36,13 +88,15 @@ body{
 #calculator
 {
   width: 50%;
+  height: 100%;
+  padding: 1%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 #main >#calculator >#form{
   width: 85%;
-  height: 80%;
+  height: 100%;
 }
 #main>#calculator>#form>#amount>#mortageblock{
   width: 100%;
@@ -129,7 +183,7 @@ body{
   min-height: 30px;
 }
 #main > #calculator > #form>#radiobutton >.radio{
-  width:100%;
+  width:98%;
   min-height:40px;
   border: 1px solid hsl(202, 55%, 16%);
   border-radius: 5px;
@@ -147,7 +201,7 @@ body{
   color: hsl(202, 55%, 16%);
   border: 0px;
   font-size: 16px;
-  margin-top: 5%;
+  margin-top: 10%;
   border-radius: 25px;
   min-height: 40px;
   min-width: 70%;
