--- a/style/style.css
+++ b/style/style.css
@@ -34,6 +34,10 @@
   padding: 2%;
   display: flex;  
 }
+#main>#calculator>#form>#amount>#title{
+  display: flex;
+  flex-direction: column;
+}
 #main > #calculator > #form > #button > button{
   margin-bottom: 15px;
 }
@@ -82,6 +86,7 @@ body{
 }
 #clear{
   text-decoration: underline;
+  cursor: pointer;
 }
 *:focus{
   outline: none;
@@ -98,6 +103,10 @@ body{
 #main >#calculator >#form{
   width: 85%;
   height: 100%;
+}
+#main>#calculator>#form>#amount>#title{
+  display: flex;
+  justify-content: space-between;
 }
 #main>#calculator>#form>#amount>#mortageblock{
   width: 100%;
@@ -202,7 +211,7 @@ body{
   color: hsl(202, 55%, 16%);
   border: 0px;
   font-size: 16px;
-  margin-top: 10%;
+  margin-top: 12%;
   border-radius: 25px;
   min-height: 40px;
   min-width: 70%;
