--- a/style/style.css
+++ b/style/style.css
@@ -96,6 +96,7 @@ body{
   width: 50%;
   height: 100%;
   padding: 1%;
+  padding-top: 2%;
   display: flex;
   justify-content: center;
   align-items: center;
